debhelper (5.0.36) UNRELEASED; urgency=low

  [ Valery Perrin ]
  * Update french translation with recent change in dh_installxfonts

  [ Joey Hess ]
  * Remove old alternate dependency on fileutils. Closes: #370011

 -- Joey Hess <joeyh@debian.org>  Sat,  3 Jun 2006 17:00:06 -0400

debhelper (5.0.35) unstable; urgency=low

  * dh_installman: When --language is used, be smarter about stripping
    language codes from man page filenames. Only strip things that look like
    codes that match the specified languages. Closes: #366645
  * dh_installxfonts: /etc/X11/fonts/X11R7 is deprecated, back to looking in
    old location, and not passing --x11r7-layout to update-fonts-alias and
    update-fonts-scale (but still to update-fonts-dir). Closes: #366234

 -- Joey Hess <joeyh@debian.org>  Wed, 10 May 2006 20:09:00 -0400

debhelper (5.0.34) unstable; urgency=low

  * dh_installcatalogs: Make sure that /etc/sgml exists. Closes: #364946

 -- Joey Hess <joeyh@debian.org>  Thu, 27 Apr 2006 12:07:56 -0400

debhelper (5.0.33) unstable; urgency=low

  [ Valery Perrin ]
  * Update french translation with recent change in dh_installxfonts

  [ Joey Hess ]
  * dh_installxfonts: Patch from Theppitak Karoonboonyanan to fix
    an instance of /etc/X11/fonts/ that was missed before. Closes: #364530

 -- Joey Hess <joeyh@debian.org>  Sun, 23 Apr 2006 22:37:54 -0400

debhelper (5.0.32) unstable; urgency=low

  * dh_installudev: Include rules.d directory so symlink can be made even
    before udev is installed. Closes: #363307

 -- Joey Hess <joeyh@debian.org>  Tue, 18 Apr 2006 10:13:54 -0400

debhelper (5.0.31) unstable; urgency=low

  [ Valery Perrin ]
  * Update french translation with recents changes in dh_installxfonts,
    dh_link and dh_compress manpages
  * Delete -f option in po4a command line. Bug in po4a has been corrected in
    new version (0.24.1).
  * Change build-depends for po4a. New version (0.24.1).