@@ -5,8 +5,13 @@ debhelper (5.0.36) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Remove old alternate dependency on fileutils. Closes: #370011
+  * Patch from Guillem Jover to make --same-arch handling code support
+    the new form of architecture wildcarding which allows use of things
+    like "linux-any" and "any-i386" in the Architecture field. Note that
+    you'll need to build-depend on a new enough dpkg-dev if using this
+    support. Closes: #371082
 
- -- Joey Hess <joeyh@debian.org>  Sat,  3 Jun 2006 17:00:06 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed,  7 Jun 2006 13:57:38 -0400
 
 debhelper (5.0.35) unstable; urgency=low
 
